deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: phone-validator-frontend
  name: phone-validator-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: phone-validator-frontend
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: phone-validator-frontend
    spec:
      containers:
      - image: johnylima/phone-validator-frontend-2:23
        name: phone-validator-frontend
        resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: lb-service
  labels:
    app: lb-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: phone-validator-frontend
