phone-validator-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phone-validator-backend
  labels:
    app: phone-validator-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: phone-validator-backend
  strategy: 
      type: RollingUpdate
      rollingUpdate:
        maxSurge: 0
        maxUnavailable: 50%
  template:
    metadata:
      labels:
        app: phone-validator-backend
    spec:
      containers:
      - image: johnylima/phone-validator-backend-2:6
        name: phone-validator-backend
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
            - name: backend-port
              containerPort: 8080
              hostPort: 8080

status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: lb-phone-validator-backend
  labels:
    app: phone-validator-backend
spec:
  type: LoadBalancer
  ports:
  - name: backend
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: phone-validator-backend
