phone-validator-frontend-deployment-alb-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phone-validator-frontend-deployment
  labels:
    app: phone-validator-frontend
    product: phone-validator
    environment: dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: phone-validator-frontend
      product: phone-validator
      environment: dev
  strategy: 
      type: RollingUpdate
      rollingUpdate:
        maxSurge: 0
        maxUnavailable: 50%
  template:
    metadata:
      labels:
        app: phone-validator-frontend
        product: phone-validator
        environment: dev
    spec:
      containers:
      - image: johnylima/phone-validator-frontend:15
        name: phone-validator-frontend
        imagePullPolicy: Always
        ports:
            - name: frontend-port
              containerPort: 8081
              hostPort: 8081
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi

status: {}

---

apiVersion: v1
kind: Service
metadata:
  name: phone-validator-frontend-service
  labels:
    app: phone-validator-frontend
    product: phone-validator
    environment: dev
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 8081
    nodePort: 32000
    protocol: TCP
  selector:
    app: phone-validator-frontend

---

# https://github.com/kubernetes-sigs/aws-load-balancer-controller/blob/main/docs/guide/ingress/annotations.md

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phone-validator-frontend-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/actions.response-503: >
      {"type":"fixed-response","fixedResponseConfig":{"contentType":"text/plain","statusCode":"503","messageBody":"503 error text"}}
    alb.ingress.kubernetes.io/actions.redirect-to-jumia: >
      {"type":"redirect","redirectConfig":{"host":"group.jumia.com","path":"/about/","port":"443","protocol":"HTTPS","query":"k=v","statusCode":"HTTP_302"}}
  labels:
    app: phone-validator-frontend
    product: phone-validator
    environment: dev
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /503
            pathType: Exact
            backend:
              service:
                name: response-503
                port:
                  name: use-annotation
          - path: /jumia
            pathType: Exact
            backend:
              service:
                name: redirect-to-jumia
                port:
                  name: use-annotation
          - path: /backend/api/v1/customers
            pathType: Prefix
            backend:
              service:
                name: phone-validator-backend-service
                port:
                  number: 80
          - path: /frontend/v1
            pathType: Prefix
            backend:
              service:
                name: phone-validator-frontend-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: phone-validator-frontend-service
                port:
                  number: 80
