phone-validator-frontend-deployment-nginx-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phone-validator-frontend-deployment
  labels:
    app: phone-validator-frontend
    product: phone-validator
    environment: dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: phone-validator-frontend
      product: phone-validator
      environment: dev
  strategy: 
      type: RollingUpdate
      rollingUpdate:
        maxSurge: 0
        maxUnavailable: 50%
  template:
    metadata:
      labels:
        app: phone-validator-frontend
        product: phone-validator
        environment: dev
    spec:
      containers:
      - image: johnylima/phone-validator-frontend:15
        name: phone-validator-frontend
        imagePullPolicy: Always
        ports:
            - name: frontend-port
              containerPort: 8081
              hostPort: 8081
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi

status: {}

---

apiVersion: v1
kind: Service
metadata:
  name: phone-validator-frontend-service
  labels:
    app: phone-validator-frontend
    product: phone-validator
    environment: dev
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 8081
    nodePort: 32000
    protocol: TCP
  selector:
    app: phone-validator-frontend

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phone-validator-frontend-ingress
  annotations:
   kubernetes.io/ingress.class: nginx
   #nginx.ingress.kubernetes.io/backend-protocol: HTTPS 
   #cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    app: phone-validator-frontend
    product: phone-validator
    environment: dev
spec:
  ingressClassName: nginx
  rules:
    - host: phonevalidator.jl.com
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: phone-validator-frontend-service
                port:
                  number: 80
  # tls:
  #   - hosts:
  #       - phonevalidator.jl.com
  #     secretName: phonevalidator.jl.com-tls
